Tue Oct  6 10:16:16 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/examples/Hello/Hello_Base/Hello_Base.mpc:
          AMI_Hello_lem_gen shouldn't be derived from ami. This would
          result in unnecessary sendc methods in the Receiver.

        * connectors/ami4ccm/examples/Hello/Receiver/Hello_Receiver.mpc:
          None of the projects shouldn't be derived from AMI.

        * connectors/ami4ccm/examples/Hello/Receiver/Hello_Receiver_exec.h:
          Cleanup unnecessary sendc methods.

Tue Oct  6 09:34:44 UTC 2009  Johnny Willemsen <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Quoter/Base/Quoter_Base.idl
        * connectors/dds4ccm/examples/Quoter/Base/Quoter_Base.mpc
        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector.idl3
        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector_exec.cpp
        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector_exec.h
        * connectors/dds4ccm/impl/ndds/Writer.tpp
          Added a Stock_Info_Seq as corba sequence for the reader

Tue Oct  6 09:30:27 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver.idl3p:
        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender.idl3p:
        * connectors/dds4ccm/examples/Quoter/Broker/Broker.idl3p:
        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector.idl3p:
        * connectors/dds4ccm/examples/Quoter/Distributor/Distributor.idl3p:
        * connectors/dds4ccm/id3p_test/Multiple_Reader_Ports/test.idl3p:
        * connectors/dds4ccm/idl/dds4ccm_Connector_Base.idl3p:
        * connectors/dds4ccm/idl/dds4ccm_Connector_Event.idl3p:
        * connectors/dds4ccm/idl/dds4ccm_Connector_State.idl3p:
        * connectors/dds4ccm/idl/dds4ccm_Getter.idl3p:
        * connectors/dds4ccm/idl/dds4ccm_MultiListener.idl3p:
        * connectors/dds4ccm/idl/dds4ccm_MultiUpdater.idl3p: