@@ -36,6 +36,7 @@
 #include "dds4ccm/impl/ndds/NDDS_Traits.h"
 #include "dds4ccm/impl/ndds/DomainParticipantFactory.h"
 #include "dds4ccm/impl/ndds/DomainParticipant.h"
+#include "dds4ccm/impl/ndds/DataReaderListener_T.h"
 
 // should be removed after lem fix
 #include "../Broker/BrokerEC.h"
@@ -245,83 +246,6 @@ namespace CIAO_Quoter_Quoter_Connector_Impl
       }
   }
 
-
-  class info_out_Listener :
-    public virtual ::DDS::DataReaderListener
-  {
-  public:
-    info_out_Listener (::CCM_DDS::Stock_Info_RawListener_ptr listen,
-		                   ::CCM_DDS::PortStatusListener_ptr psl,
-		                   ACE_Atomic_Op <TAO_SYNCH_MUTEX, bool> &enabled)
-      : listener_ (::CCM_DDS::Stock_Info_RawListener::_duplicate (listen)),
-        portlistener_ (::CCM_DDS::PortStatusListener::_duplicate (psl)),
-	      enable_ (enabled)
-    {
-    };
-
-    // from DataReaderListener
-    virtual void on_data_available( ::DDS::DataReader *rdr)
-    {
-      printf ("*** on data available\n");
-      if (!this->enable_.value ())
-        return;
-
-      ::CIAO::DDS4CCM::RTI::RTI_DataReader_i* rd = dynamic_cast < ::CIAO::DDS4CCM::RTI::RTI_DataReader_i*>(rdr);
-      ::Quoter::Stock_InfoDataReader * reader = dynamic_cast< ::Quoter::Stock_InfoDataReader * > ((rd->get_datareader ()));
-
-      if (!reader) {
-        /* In this specific case, this will never fail */
-        ACE_ERROR ((LM_ERROR, ACE_TEXT ("Stock_InfoDataReader::narrow failed.\n")));
-        return;
-      }
-
-      /* Loop until there are messages available in the queue */
-      for(;;) {
-        ::Quoter::Stock_Info instance;
-        ::DDS_SampleInfo sampleinfo;
-        ::DDS::ReturnCode_t const result  = reader->take_next_sample(instance,
-                                                                     sampleinfo);
-        if (result == DDS_RETCODE_NO_DATA) {
-	          printf ("no more samples\n");
-            /* No more samples */
-            break;
-        } else if (result != DDS_RETCODE_OK) {
-            ACE_ERROR ((LM_ERROR, ACE_TEXT ("Unable to take data from data reader, error %d.\n"), result));
-            return;
-        }
-        if (sampleinfo.valid_data) {
-	          printf ("got valid data\n");
-            ::CCM_DDS::ReadInfo empty;
-            listener_->on_data (instance, empty);
-        }
-
-      }
-
-    };
-
-    virtual void on_requested_deadline_missed (::DDS::DataReader_ptr the_reader,
-                                               const ::DDS::RequestedDeadlineMissedStatus & status)
-    {
-      this->portlistener_->on_requested_deadline_missed (the_reader, status);
-    };
-
-
-    virtual void on_sample_lost (::DDS::DataReader_ptr the_reader,
-                                 const ::DDS::SampleLostStatus & status)
-    {
-      this->portlistener_->on_sample_lost (the_reader, status);
-    };
-
-    // From ListenerControl
-    bool enabled () const;
-    void enabled (bool enable);
-
-  private:
-    ::CCM_DDS::Stock_Info_RawListener_var listener_;
-    ::CCM_DDS::PortStatusListener_var portlistener_;
-    ACE_Atomic_Op <TAO_SYNCH_MUTEX, bool> &enable_;
-  };
-
   void
   Quoter_Connector_exec_i::configure_port_info_out_ (void)
   {
@@ -344,9 +268,10 @@ namespace CIAO_Quoter_Quoter_Connector_Impl
           {
             this->__info_out_portstatus_ = this->context_->get_connection_info_out_status ();
 
-            this->__info_out_datareaderlistener = new info_out_Listener (this->context_->get_connection_info_out_listener (),
-                                                                         this->context_->get_connection_info_out_status (),
-									 this->__info_out_rawlistener_enabled_);
+            this->__info_out_datareaderlistener = new ::CIAO::DDS4CCM::RTI::DataReaderListener_T<Stock_Info_Traits, ::CCM_DDS::Stock_Info_RawListener, ::CCM_DDS::PortStatusListener> (
+              this->context_->get_connection_info_out_listener (),
+              this->context_->get_connection_info_out_status (),
+							this->__info_out_rawlistener_enabled_);
             ::DDS::DataReaderQos drqos;
             this->__info_out_datareader_ =
               this->__info_out_subscriber_->create_datareader (this->topic_.in (),
